--- a/App.config
+++ b/App.config
@@ -3,4 +3,24 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_ISupplyManager">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+            </netTcpBinding>
+        </bindings>
+        <client>
+            <endpoint address="net.tcp://localhost:8081/Service/SuppliesServices"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISupplyManager"
+                contract="SupplyServiceReference.ISupplyManager" name="NetTcpBinding_ISupplyManager">
+                <identity>
+                    <userPrincipalName value="MATEBOOK-D15\jafet" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
