- Fonts added - RegisterSupplyPage modified

--- a/ItaliaPizzaClient.csproj
+++ b/ItaliaPizzaClient.csproj
@@ -73,6 +73,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Model\SupplyCategory.cs" />
+    <Compile Include="Model\UnitMeasure.cs" />
     <Compile Include="Utilities\Constants.cs" />
     <Compile Include="Utilities\ImageUtilities.cs" />
     <Compile Include="Utilities\NavigationManager.cs" />
@@ -111,7 +113,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resources\Styles\ColorPalettes.xaml">
+    <Page Include="Resources\Styles\UIElementals.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -178,6 +180,15 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-BLACK.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-BOLD.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-HEAVY.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-LIGHT.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-MEDIUM.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-REGULAR.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-SEMIBOLD.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-THIN.OTF" />
+    <Resource Include="Resources\Fonts\SF-PRO-DISPLAY-ULTRALIGHT.OTF" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -252,5 +263,6 @@
   <ItemGroup>
     <Resource Include="Resources\Icons\info-icon.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
