--- a/App.config
+++ b/App.config
@@ -6,7 +6,12 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
-                <binding name="NetTcpBinding_ISupplyManager">
+                <binding name="NetTcpBinding_IMainManager">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IMainManager1">
                     <security>
                         <transport sslProtocols="None" />
                     </security>
@@ -14,11 +19,18 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8081/Service/SuppliesServices"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISupplyManager"
-                contract="SupplyServiceReference.ISupplyManager" name="NetTcpBinding_ISupplyManager">
+            <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IMainManager" contract="SupplyServiceReference.IMainManager"
+                name="NetTcpBinding_IMainManager">
                 <identity>
-                    <userPrincipalName value="MATEBOOK-D15\jafet" />
+                    <userPrincipalName value="CEBAGO\Cesar" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IMainManager1" contract="ItaliaPizzaServices.IMainManager"
+                name="NetTcpBinding_IMainManager1">
+                <identity>
+                    <userPrincipalName value="CEBAGO\Cesar" />
                 </identity>
             </endpoint>
         </client>
