--- a/App.config
+++ b/App.config
@@ -4,20 +4,39 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <netTcpBinding>
-                <binding name="NetTcpBinding_IMainManager">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
-                <binding name="NetTcpBinding_IMainManager1">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
-            </netTcpBinding>
-        </bindings>
+		<bindings>
+			<netTcpBinding>
+				<binding name="NetTcpBinding_IMainManager"
+						 maxBufferSize="2147483647"
+						 maxReceivedMessageSize="2147483647"
+						 sendTimeout="00:05:00"
+						 receiveTimeout="00:05:00">
+					<readerQuotas maxDepth="2147483647"
+								  maxStringContentLength="2147483647"
+								  maxArrayLength="2147483647"
+								  maxBytesPerRead="2147483647"
+								  maxNameTableCharCount="2147483647"/>
+					<security>
+						<transport sslProtocols="None" />
+					</security>
+				</binding>
+
+				<binding name="NetTcpBinding_IMainManager1"
+						 maxBufferSize="2147483647"
+						 maxReceivedMessageSize="2147483647"
+						 sendTimeout="00:15:00"
+						 receiveTimeout="00:05:00">
+					<readerQuotas maxDepth="2147483647"
+								  maxStringContentLength="2147483647"
+								  maxArrayLength="2147483647"
+								  maxBytesPerRead="2147483647"
+								  maxNameTableCharCount="2147483647"/>
+					<security>
+						<transport sslProtocols="None" />
+					</security>
+				</binding>
+			</netTcpBinding>
+		</bindings>
         <client>
             <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IMainManager" contract="SupplyServiceReference.IMainManager"
