--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks.Core" version="5.1.0" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks.Material" version="5.1.0" targetFramework="net48" />
   <package id="PresentationFramework.Aero2" version="1.0.1" targetFramework="net48" />
