- MessageDialog added - ConnectionUtilities added - PersonalPage added - RegisterEmployee added

--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
-                <binding name="NetTcpBinding_ISupplyManager">
+                <binding name="NetTcpBinding_IMainManager">
                     <security>
                         <transport sslProtocols="None" />
                     </security>
@@ -14,9 +14,9 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:8081/Service/SuppliesServices"
-                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISupplyManager"
-                contract="SupplyServiceReference.ISupplyManager" name="NetTcpBinding_ISupplyManager">
+            <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IMainManager" contract="ServiceReference.IMainManager"
+                name="NetTcpBinding_IMainManager">
                 <identity>
                     <userPrincipalName value="MATEBOOK-D15\jafet" />
                 </identity>
