--- a/App.config
+++ b/App.config
@@ -4,23 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <netTcpBinding>
-                <binding name="NetTcpBinding_IMainManager">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
-            </netTcpBinding>
-        </bindings>
-        <client>
-            <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IMainManager" contract="ServiceReference.IMainManager"
-                name="NetTcpBinding_IMainManager">
-                <identity>
-                    <userPrincipalName value="MATEBOOK-D15\jafet" />
-                </identity>
-            </endpoint>
-        </client>
+        <bindings />
+        <client />
     </system.serviceModel>
 </configuration>
