--- a/ItaliaPizzaClient.csproj
+++ b/ItaliaPizzaClient.csproj
@@ -84,6 +84,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Model\EmployeeRole.cs" />
+    <Compile Include="Model\OrderItem.cs" />
     <Compile Include="Model\SupplyCategory.cs" />
     <Compile Include="Model\UnitMeasure.cs" />
     <Compile Include="Utilities\Animations.cs" />
