Added ValidateDecimalInput method

--- a/ItaliaPizzaClient.csproj
+++ b/ItaliaPizzaClient.csproj
@@ -78,7 +78,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Connected Services\ItaliasPizzaServices\Reference.cs">
+    <Compile Include="Connected Services\ItaliaPizzaServices\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -265,14 +265,26 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\ItaliasPizzaServices\MainService.wsdl" />
-    <None Include="Connected Services\ItaliasPizzaServices\Service.xsd">
+    <None Include="Connected Services\ItaliaPizzaServices\ItaliaPizzaClient.ItaliaPizzaServices.SupplierDTO.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ItaliaPizzaServices\ItaliaPizzaClient.ItaliaPizzaServices.SupplyCategoryDTO.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ItaliaPizzaServices\ItaliaPizzaClient.ItaliaPizzaServices.SupplyDTO.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ItaliaPizzaServices\MainService.wsdl" />
+    <None Include="Connected Services\ItaliaPizzaServices\Service.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ItaliasPizzaServices\Service1.xsd">
+    <None Include="Connected Services\ItaliaPizzaServices\Service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\ItaliasPizzaServices\Service2.xsd">
+    <None Include="Connected Services\ItaliaPizzaServices\Service2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ItaliaPizzaServices\Service3.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
@@ -337,25 +349,6 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\ItaliasPizzaServices\" />
-    <WCFMetadataStorage Include="Connected Services\SupplyServiceReference\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\SupplyServiceReference\Service.disco" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\SupplyServiceReference\configuration91.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\SupplyServiceReference\configuration.svcinfo" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\SupplyServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Icons\gallery-icon.png" />
   </ItemGroup>
   <ItemGroup>
@@ -371,7 +364,6 @@
     <Resource Include="Resources\Icons\redirect-icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\ItaliasPizzaServices\Service.disco" />
     <Resource Include="Resources\Icons\error-alert-icon.png" />
   </ItemGroup>
   <ItemGroup>
@@ -387,13 +379,13 @@
     <None Include="Connected Services\ItaliaPizzaServices\Service.disco" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\ItaliasPizzaServices\configuration91.svcinfo" />
+    <None Include="Connected Services\ItaliaPizzaServices\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\ItaliasPizzaServices\configuration.svcinfo" />
+    <None Include="Connected Services\ItaliaPizzaServices\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\ItaliasPizzaServices\Reference.svcmap">
+    <None Include="Connected Services\ItaliaPizzaServices\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
