--- a/App.config
+++ b/App.config
@@ -30,10 +30,10 @@
                 </identity>
             </endpoint>
             <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IMainManager1" contract="ItaliasPizzaServices.IMainManager"
+                bindingConfiguration="NetTcpBinding_IMainManager1" contract="ItaliaPizzaServices.IMainManager"
                 name="NetTcpBinding_IMainManager1">
                 <identity>
-                    <userPrincipalName value="_3776_\abrah" />
+                    <userPrincipalName value="DESKTOP-HKQ7CK7\Kaleb" />
                 </identity>
             </endpoint>
         </client>
