CU_register recipe

--- a/App.config
+++ b/App.config
@@ -33,7 +33,7 @@
                 bindingConfiguration="NetTcpBinding_IMainManager1" contract="ItaliaPizzaServices.IMainManager"
                 name="NetTcpBinding_IMainManager1">
                 <identity>
-                    <userPrincipalName value="MATEBOOK-D15\jafet" />
+                    <userPrincipalName value="CEBAGO\Cesar" />
                 </identity>
             </endpoint>
         </client>
